--- a/皮卡世界html.html
+++ b/皮卡世界html.html
@@ -70,7 +70,7 @@
         </div>
         <div class="section">
             <h2>皮卡文学推荐</h2>
-            <p>世界为什么要有图书馆？看看误入体制内的文化的小姐姐从0到1构建理想公共空间。</p>
+            <p>世上为什么要有图书馆？看看误入体制内的文化的小姐姐从0到1构建理想公共空间。</p>
         </div>
         <div class="section">
             <h3>好物推荐</h3>
